# Chiper

./: .gitignore  Cargo.toml  README.md  chip8_config.toml  config.toml
src/: constants.rs  cpu.rs  display.rs  emulator.rs  font.rs  gif_recorder.rs  input.rs  main.rs  memory.rs  opcodes.rs  reg.rs  settings.rs  timer.rs
