[package]
name = "Chip8"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = "0.29.0"
rand = "0.9.2"
pixels = "0.15"
winit = "0.30.12"
env_logger = "0.11.8"
rodio = "0.21.1"
gif = "0.13.3"
image = "0.25.6"
crossbeam-channel = "0.5"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
